# amtemplate

./: .gitignore  README  configure.ac
m4/: mkdir.m4
src/: Makefile.am  main.c
